// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputTextarea > matches snapshot — default 1`] = `
"<div class="fgroup"><label>Notes
    <!--v-if--><span class="opt">· optional</span>
  </label>
  <div class="field area"><textarea placeholder="What do you want to remember?"></textarea>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`InputTextarea > matches snapshot — error state 1`] = `
"<div class="fgroup"><label>Notes
    <!--v-if-->
    <!--v-if-->
  </label>
  <div class="field area is-error"><textarea></textarea><span class="val-ic"><svg class="ricon" width="17" height="17" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.9" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="9"></circle><path d="M9 9l6 6M15 9l-6 6"></path></svg></span></div>
  <div class="fhelp error"><svg class="ricon" width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
      <circle cx="12" cy="12" r="9"></circle>
      <path d="M12 7.5v5.5"></path>
      <path d="M12 16.5h.01"></path>
    </svg> Cannot be empty</div>
</div>"
`;
